[Feat 1094] Removed a few Sonar violations